Made Home Page Responsive

--- a/client/src/routes/page.css
+++ b/client/src/routes/page.css
@@ -138,7 +138,7 @@ p {
 
 #incidents-card {
     width: calc(100% - 130px);
-    aspect-ratio: 4;
+    aspect-ratio: 3;
     margin-top: 30px;
     margin-left: 40px;
 }
@@ -191,4 +191,73 @@ p {
 
 .incidents-subtitle {
     top: 10px;
+}
+
+@media (max-width: 1024px) {
+
+    h1 {
+        font-size: 48px;
+    }
+    
+    h2 {
+        font-size: 24px;
+    }
+    
+    h3 {
+        font-size: 16px;
+    }
+    
+    h4 {
+        font-size: 14px;
+    }
+    
+    p {
+        font-size: 14px;
+    }
+
+    #welcome {
+        margin-left: 30px;
+    }
+
+    .card {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    #small-cards {
+        width: 100%;
+        aspect-ratio: initial;
+        margin: 0;
+        display: block;
+    }
+
+    #ratings-card {
+        width: calc(100% - 70px);
+        aspect-ratio: 1.25;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+
+    .incident-type {
+        width: 80px;
+    }
+
+    #graph-card {
+        width: calc(100% - 70px);
+        aspect-ratio: 1.25;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+
+    #incidents-card {
+        width: calc(100% - 70px);
+        aspect-ratio: 1;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+
+    .incidents-type {
+        left: 15px;
+    }
+
 }
