--- a/client/src/routes/search/page.css
+++ b/client/src/routes/search/page.css
@@ -51,6 +51,14 @@
     float: left;
 }
 
+.bot-message {
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 15px;
+    background-color:rgb(200, 200, 200);
+}
+
 #prompt-starters {
     width: 740px;
     margin-left: calc(50% - 370px);
