AI analysus pushed

--- a/client/src/routes/search/page.css
+++ b/client/src/routes/search/page.css
@@ -55,6 +55,8 @@
     margin-top: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     border-radius: 15px;
     background-color:rgb(200, 200, 200);
 }
